--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>IT Company Website Template</title>
+    <title>Intellisys it solutions</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="IT Company Website Template" name="keywords">
     <meta content="IT Company Website Template" name="description">
