--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="carousel-content">
-                                <h2>Your Vision, Our IntelliSys Expertise</h2>
+                                <h2>Your Vision, Our Intellisys Expertise</h2>
                                 <p>Delivering exceptional web and app design and development for your businessr</p>
                                 <!-- <a class="btn" href="">Read More</a> -->
                             </div>
@@ -116,7 +116,7 @@
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="carousel-content">
-                                <h2>Empowering Your Digital Presence with IntelliSy</h2>
+                                <h2>Empowering Your Digital Presence with Intellisys</h2>
                                 <p>Offering expert web and app design and development for impactful solutions.</p>
                                 <!-- <a class="btn" href="">Read More</a> -->
                             </div>
@@ -250,7 +250,7 @@
                             <img src="img/software-testing.jpg" class="img-fluid" alt="Team Member">
                         </div>
                         <div class="service-detail">
-                            <h4><a href="">SOFTWARE TESTING</a></h4>
+                            <h4><a href="">Software Testing</a></h4>
                             <p>Ensuring the highest quality with thorough and rigorous testing.
                                 Identifying and resolving issues to deliver flawless software.
                                 Enhancing reliability and performance through meticulous quality assurance.</p>
