--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                    
 
 
-                    <div class="col-lg-3 col-md-6 footer-contact">
+                    <div class="col-lg-3 col-md-6 footer-contact f-font">
                         <h4>Contact Us</h4>
                         <p>
                             Gera Imperim rise, 328-B<br>
