--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="col-md-6">
                             <div class="carousel-content">
                                 <h2>Your Vision, Our Intellisys Expertise</h2>
-                                <p>Delivering exceptional web and app design and development for your business</p>
+                                <p>Delivering exceptional web/app design and development for your business</p>
                                 <!-- <a class="btn" href="">Read More</a> -->
                             </div>
                         </div>
@@ -101,7 +101,7 @@
                         <div class="col-md-6">
                             <div class="carousel-content">
                                 <h2>Your Vision, Our Intellisys Expertise</h2>
-                                <p>Delivering exceptional web and app design and development for your businessr</p>
+                                <p>Delivering exceptional web/app design and development for your business</p>
                                 <!-- <a class="btn" href="">Read More</a> -->
                             </div>
                         </div>
@@ -541,7 +541,7 @@
                     </div>
                     <div class="team-info">
                         <h3>Mr Mahesh M. Patil</h3>
-                        <p>Managing Director</p>
+                        <p>Founder/ Managing Director</p>
                     </div>
                 </div>
 
@@ -557,7 +557,7 @@
                     </div>
                     <div class="team-info">
                         <h3>Mr Rutvik B. Bhosle</h3>
-                        <p>Managing Director</p>
+                        <p>Founder / Managing Director</p>
                     </div>
                 </div>
 
@@ -575,7 +575,7 @@
                     </div>
                     <div class="team-info">
                         <h3>Mr. Swapnil A. Deshmukh</h3>
-                        <p>Managing Director</p>
+                        <p>Chief HR Officer</p>
                     </div>
                 </div>
 
