--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                         </div>
                     </div>
                     <div class="team-info">
-                        <h3>Mr Rutvik B. Bhosle</h3>
+                        <h3>Mr Rutik B. Bhosle</h3>
                         <p>Founder / Managing Director</p>
                     </div>
                 </div>
