--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <img width="50" height="50" src="img/about.png" alt="" class="img-fluid">
                     </div>
                     <div class="about-content">
-                        <h2>Welcome to Intellisys It Solutions</h2>
+                        <h2>Welcome to Intellisys IT Solutions</h2>
                         <p class="animate__animated animate__zoomIn animate__delay-2s">
                             Welcome to Intellisys IT Solutions, where we specialize in delivering comprehensive digital
                             solutions. Our services include full stack development, offering complete web and mobile app
@@ -386,7 +386,7 @@
                 <h2>Respond Now</h2>
               
             </div>
-            <a class="btn animate__animated   animate-on-scroll" href="tel:+917058466335">Call Now</a>
+            <a class="btn animate__animated   animate-on-scroll" href="tel:+919112817771">Call Now</a>
         </div>
         
     </div>
