--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </div>
                     <div class="about-content">
                         <h2>Welcome to Intellisys IT Solutions</h2>
-                        <p class="animate__animated animate__zoomIn animate__delay-2s">
+                        <p style="color:white"; class="animate__animated animate__zoomIn animate__delay-2s">
                             Welcome to Intellisys IT Solutions, where we specialize in delivering comprehensive digital
                             solutions. Our services include full stack development, offering complete web and mobile app
                             solutions from frontend design to backend architecture. We ensure your software is
